# mlrs

./: Cargo.toml
examples/: dict.mlrs  let_pattern_list.mlrs  lists.mlrs  map.mlrs  test.mlrs  tuples.mlrs  zip.mlrs
src/: execute.rs  main.rs  parser.rs  syntax.rs  utils.rs
src/ir_tree/: error.rs  ir_module.rs  mod.rs
src/parser/: expression.rs
