[package]
name = "mlrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
nom = "7.1.0"
partitions = "0.2.4"
clap = { version = "3.2.22", features = ["derive", "suggestions", "color"] }
