[package]
name = "mlrs"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[dependencies]
nom = "7.1.0"
clap = { version = "4.1.4", features = ["derive", "suggestions", "color"] }
